fix a small issue with css on posters' ratings
- most-right poster "corner rating" was cropped by the scrollbar

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -345,8 +345,8 @@
 #trakt #discover .row,
 #trakt #ratings.row {
   position: absolute;
-  right: 10px;
-  width: calc(100% - 55px);
+  right: 14px;
+  width: calc(100% - 59px);
 }
 
 #trakt #ratings .row {
